<resources>
    <string name="app_name">FragmentStatePageAdapter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_activity">Second activity</string>
    <string name="welcome_to_fragment_1">Welcome to Fragment 1</string>
    <string name="welcome_to_fragment_2">Welcome to Fragment 2</string>
    <string name="welcome_to_fragment_3">Welcome to Fragment 3</string>
    <string name="go_to_fgm1">Go to fragment 1</string>
    <string name="go_to_fgm2">Go to fragment 2</string>
    <string name="go_to_fgm3">Go to fragment 3</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="go_to_fgm1_txt">Going to Fragment 1</string>
    <string name="go_to_fgm2_txt">Going to Fragment 2</string>
    <string name="go_to_fgm3_txt">Going to Fragment 3</string>
    <string name="go_to_second_act_txt">Going to Second Activity</string>
</resources>
